syntax = "proto3";
package proto;
option go_package = "./proto";
service LoggerService {
    rpc Log(LogRequest) returns (SuccessResponse);
}

message LogRequest{
    string serviceName = 1;
    string logLevel = 2;
    string logTime = 3;
    string message = 4;
    string identifier = 5;
}

message SuccessResponse{
    string response = 1;
}